Switch to nightly build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Automatic build
 
 on:
-  push:
-    branches: [ main ]
+  schedule:
+    - cron: '0 2 * * *'
 
 jobs:
   build:
@@ -17,8 +17,8 @@ jobs:
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "continuous"
+        automatic_release_tag: "nightly"
         prerelease: true
-        title: "Continuous Build"
+        title: "Nightly Build"
         files: |
           squashfuse*
