--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,8 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Build x86
-      run: ./build.sh
+      #    - name: Build x86
+      #run: ./build.sh
 
     - name: Build aarch64
       run: ./build-aarch64.sh
