Move dep installation out of build.sh

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,14 +10,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Build for x86_64
-      run: ./build.sh
+    - name: Install deps
+      run:  sudo apt install -y zlib1g-dev liblzma-dev libzstd-dev liblz4-dev make gcc libfuse-dev autoconf libtool pkg-config
 
-    - name: Download Ubuntu aarch64
-      run: wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-arm64.squashfs
+    - name: Build for x86_64
+      run:  ./build.sh
+
+    - name: Download Ubuntu aarch64 image
+      run:  wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-arm64.squashfs
 
     - name: Build for aarch64
-      run: ./build_in_chroot.sh arm64
+      run:  ./build_in_chroot.sh arm64
   
     - name: Upload build
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -25,7 +28,7 @@ jobs:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "nightly"
         prerelease: true
-        title: "Nightly Build"
+        title: "Monthly build"
         files: |
           squashfuse*
-          chroot/squashfuse*
+          chrootdir/squashfuse*
