--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,7 +6,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+#    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
 
