--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
 #    runs-on: ubuntu-18.04
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21.04
 
     steps:
     - uses: actions/checkout@v2
