--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,16 +7,22 @@ on:
 jobs:
   build:
 #    runs-on: ubuntu-18.04
-    runs-on: ubuntu-21.04
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install deps
-      run:  sudo apt install -y zlib1g-dev liblzma-dev libzstd-dev liblz4-dev make gcc libfuse-dev libfuse3-dev autoconf libtool pkg-config
+#    - name: Install deps
+#      run:  sudo apt install -y zlib1g-dev liblzma-dev libzstd-dev liblz4-dev make gcc libfuse-dev libfuse3-dev autoconf libtool pkg-config
+
+#    - name: Build for x86_64
+#      run:  ./build.sh
+
+    - name: Download Ubuntu image
+      run:  wget https://cloud-images.ubuntu.com/impish/current/impish-server-cloudimg-amd64.squashfs
 
     - name: Build for x86_64
-      run:  ./build.sh
+      run:  ./build_in_chroot.sh amd64
 
     - name: Download Ubuntu aarch64 image
       run:  wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-arm64.squashfs
