--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,13 +18,18 @@ jobs:
 #    - name: Build for x86_64
 #      run:  ./build.sh
 
-    - name: Download Ubuntu image
+#    - name: Download Ubuntu image
+#      run: |
+#        wget https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-amd64.squashfs
+#        wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-amd64.squashfs
+    - name: Setup Alpine and deps
       run: |
-        wget https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-amd64.squashfs
-        wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-amd64.squashfs
+        curl -s https://raw.githubusercontent.com/89luca89/distrobox/main/install | sudo sh
+        distrobox create --name alpine --image alpine:3.16 --yes
+        distrobox enter alpine -- sudo apk add autoconf git gcc automake make libc-dev fuse3 fuse3-static libtool xz zstd lz4
 
     - name: Build for x86_64
-      run:  ./build_in_chroot.sh amd64
+      run:  distrobox enter alpine -- sh build-static.sh
 
     - name: Download Ubuntu aarch64 image
       run: |
