--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -26,7 +26,7 @@ jobs:
       run: |
         curl -s https://raw.githubusercontent.com/89luca89/distrobox/main/install | sudo sh
         distrobox create --name alpine --image alpine:3.16 --yes
-        distrobox enter alpine -- sudo apk add autoconf git gcc automake make libc-dev fuse3 fuse3-static libtool xz-dev zstd-dev lz4-dev xz zstd lz4
+        distrobox enter alpine -- sudo apk add autoconf git gcc automake make libc-dev fuse3-dev fuse3-static libtool xz-dev zstd-dev lz4-dev xz zstd lz4
 
     - name: Build for x86_64
       run:  distrobox enter alpine -- sh build-static.sh
