--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -48,4 +48,5 @@ jobs:
         title: "Monthly build"
         files: |
           squashfuse*
+          libsquashfuse*
 #          chrootdir/squashfuse*
