--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,17 +12,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Download Ubuntu image
+    - name: Setup Alpine and deps
       run: |
-        wget https://cloud-images.ubuntu.com/impish/current/impish-server-cloudimg-amd64.squashfs
-        wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-amd64.squashfs
+        curl -s https://raw.githubusercontent.com/89luca89/distrobox/main/install | sudo sh
+        distrobox create --name alpine --image alpine:3.16 --yes
+        distrobox enter alpine -- sudo apk add autoconf git gcc automake make libc-dev fuse3-dev fuse3-static libtool zlib-dev xz-dev zstd-dev lz4-dev zlib-static zstd-static lz4-static
 
     - name: Build for x86_64
-      run:  ./build_in_chroot.sh amd64
+      run:  distrobox enter alpine -- sh build-static.sh
 
     - name: Download Ubuntu aarch64 image
       run: |
-        wget https://cloud-images.ubuntu.com/impish/current/impish-server-cloudimg-arm64.squashfs
+        wget https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-arm64.squashfs
         wget https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-arm64.squashfs
 
     - name: Build for aarch64
@@ -37,3 +38,4 @@ jobs:
         title: "Monthly build"
         files: |
           squashfuse*
+          libsquashfuse*
