--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup latest Alpine Linux (x86_64)
         uses: jirutka/setup-alpine@v1
         with:
-          branch: edge
+          branch: v3.15
           shell-name: alpine-x86_64.sh
           packages: >
             autoconf
